--- a/More/todo.txt
+++ b/More/todo.txt
@@ -7,4 +7,7 @@
 [X] Handle negative numbers and dot prefix of number;
 [ ] Build Basic Precompiler -> Macros, Extenders.
 [ ] Parse Types boolean.
-[ ] Build Basic AST from token collection.
+[X] Build Basic AST from token collection.
+[X] Exception Class handlers.
+[X] Bulk AST support for complex parsing.
+[X] Variable declaration lookahead for nested.
