Added parser for return keys with multiple return for the future Vm now executes Return too. + 22,23 tests for this change

--- a/More/todo.txt
+++ b/More/todo.txt
@@ -26,7 +26,7 @@ SIK todo list:
 [X] Object Instruction debuger output print.
 [ ] DEFER keyword for blocks.
 [X] Functions base parser and Ast generator.
-[ ] RETRUN keyword decleration.
+[X] RETRUN keyword decleration.
 [X] PRINT keyword -> primitive withe comma support.
 [X] BREAK keyword.
 [X] BREAKIF keyword.
